# bootchart-lite

./: AUTHORS  ChangeLog  Makefile.am  ProjectHome.md  README  README.md  autogen.sh
src/: Makefile.am
trunk/: autogen.sh  configure.ac
trunk/src/: bootchart-lite.c
trunk/src/.deps/: bootchart-lite.Po  fbootchart.Po
