AC_PREREQ(2.53)
AC_INIT(bootchart-lite, 0.0.1, http://www.openmoko.org/)
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR(src/bootchart-lite.c)
dnl AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CC_STDC
AC_STDC_HEADERS
#AC_PROG_LIBTOOL
#AC_PROG_INTLTOOL([0.35.0])

dnl i18n support
dnl GETTEXT_PACKAGE=AC_PACKAGE_NAME
dnl AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Gettext package])
dnl AC_SUBST(GETTEXT_PACKAGE)
dnl AM_GLIB_GNU_GETTEXT

dnl PKG_CHECK_MODULES(DEPENDENCIES, libmokoui2 gconf-2.0)

#AC_SUBST(DEPENDENCIES)

AC_OUTPUT([
Makefile
src/Makefile
])

